# diploma

./: ..gitignore.un~  .clang-format  .gitignore  .gitignore~  CMakeLists.txt  README.md  TODO.txt  compile_commands.json  flowchart.drawio  literature.odt  part1.odt
code/: .clang-format  CMakeLists.txt
code/src/: CMakeLists.txt  main.cpp
diploma/: doc.docx
include/: block.h  decision.h  flowline.h  functions.h  input.h  proccess.h  terminal.h
resources/: blocks.cfg
src/: CMakeLists.txt  block.cpp  decision.cpp  flowline.cpp  functions.cpp  input.cpp  main.cpp  proccess.cpp  terminal.cpp
